--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+    </style>
 </head>
 <body>
   <div class="main-container">
@@ -17,14 +18,16 @@
     <div class="content">
       <h1>Stay updated!</h1>
       <p>Join 60,000+ product managers receiving monthly updates on:</p>
-      <div class="list">
         <ul>
-          <li>Product discovery and building what matters</li>
-          <li>Measuring to ensure updates are a success</li>
-          <li>And much more!</li>
+          <li><p class="list">Product discovery and building what matters</p></li>
+          <li><p class="list">Measuring to ensure updates are a success</p></li>
+          <li><p class="list">And much more!</p></li>
         </ul>
-
-      </div>
+      <form action="" method="">
+        <label for="email">Email address</label>
+        <input type="email"  placeholder="email@company.com">
+        <button type="submit">Subscribe to monthly newsletter</button>
+      </form>
     </div>
   </div>
  
