Finalized mobile view of forms page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1>Stay updated!</h1>
       <p>Join 60,000+ product managers receiving monthly updates on:</p>
         <ul>
-          <li><p class="list">Product discovery and building what matters</p></li>
-          <li><p class="list">Measuring to ensure updates are a success</p></li>
-          <li><p class="list">And much more!</p></li>
+          <li>Product discovery and building what matters</li>
+          <li>Measuring to ensure updates are a success</li>
+          <li>And much more!</li>
         </ul>
       <form action="" method="">
         <label for="email">Email address</label>
