FInished success card (mobile view)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+
   <div class="main-container">
     <div class="image">
       <img src="assets/images/illustration-sign-up-mobile.svg" alt="">
@@ -30,6 +31,14 @@
       </form>
     </div>
   </div>
+
+  <div class="success-card">
+    <img src="assets/images/icon-success.svg" alt="">
+    <h1>Thanks for subscribing!</h1>
+    <p>A confirmation email has been sent to <span id="email-input">ash@loremcompany.com.</span> 
+      Please open it and click the button inside to confirm your subscription.</p>
+      <button class="dismiss-btn">Dismiss Message</button>
+  </div>
  
   
  
@@ -38,13 +47,6 @@
 
  <!-- Sign-up form start
 
-  Stay updated!
-
-  
-
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
 
   Email address
   email@company.com -->
@@ -55,10 +57,9 @@
 
   <!-- Success message start -->
 
-  <!-- Thanks for subscribing!
+  <!-- 
 
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
+  
 
   Dismiss message -->
 
