Added error state message

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           <li>And much more!</li>
         </ul>
       <form action="" method="">
-        <label for="email">Email address</label>
+        <div class="email-top">
+          <label for="email">Email address</label>
+          <span id="invalid-msg">Valid email equired</span>
+        </div>
+        
         <input type="email"  placeholder="email@company.com">
         <button type="submit">Subscribe to monthly newsletter</button>
       </form>
