--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
   <style>
@@ -30,8 +30,8 @@
           <span id="invalid-msg">Valid email equired</span>
         </div>
         
-        <input type="email"  placeholder="email@company.com">
-        <button type="submit">Subscribe to monthly newsletter</button>
+        <input type="email"  placeholder="email@company.com" id="user-email">
+        <button type="submit" class="submit-btn">Subscribe to monthly newsletter</button>
       </form>
     </div>
   </div>
@@ -45,7 +45,7 @@
   </div>
  
   
- 
+ <script src="assets/js/script.js"></script>
 </body>
 </html>
 
